--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,6 +53,9 @@ a:hover {color: #da1f1f;}
 .text-left {text-align: left;}
 .text-right {text-align: right;}
 
+.green {color: green;}
+.red {color: red;}
+
 .clear {
     clear: both;
 }
@@ -76,9 +79,39 @@ button:hover, input[type="submit"]:hover, .button:hover {
     color: #4c4c4c;
 }
 
+input[type="text"],
+input[type="password"],
+input[type="email"],
+textarea,
+select {
+    border: 1px solid #e8e8e8;
+    width: 300px;
+    display: block;
+    margin-bottom: 5px;
+    padding: 5px 5px;
+    box-sizing: border-box;
+}
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select {
+    height: 35px;
+}
+
 .wrapper {
     width: 980px;
     margin: 0 auto;
+}
+
+
+.form {
+    width: 300px;
+    margin: 0 auto;
+}
+
+.form input[type="submit"] {
+    float: right;
 }
 
 body {
@@ -119,7 +152,7 @@ header .navigation li.active {
 
 .content-box .title {
     width: 100%;
-    border-bottom: 1px solid #d4d4d4;
+    border-bottom: 1px solid #e8e8e8;
     padding: 0 10px 10px;
     margin-bottom: 10px;
 }
@@ -140,7 +173,122 @@ header .navigation li.active {
     display: inline-block;
     text-align: center;
     font-size: 13px;
-    margin: 0 10px;
+    margin: 0 9px;
+}
+
+.photo-list li {
+    border: 1px solid #d4d4d4;
+    background-color: #fff;
+    float: left;
+}
+
+.album-list li {
+    width: 100px;
+    height: 100px;
+}
+
+.album-list li a {
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+}
+
+.photo-list li a img {
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+.photo {
+    width: 760px;
+    margin-right: 20px;
+    float: left;
+}
+
+.photo-nav {
+    width: 760px;
+    margin-bottom: 10px;
+}
+
+.photo-container {
+    width: 100%;
+    height: 760px;
+    background-color: #fff;
+    position: relative;
+}
+
+.photo-container img {
+    max-height: 100%;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+}
+
+p.photo-desc {
+    width: 760px;
+    font-size: 14px;
+    padding: 20px;
+    color: #717171;
+    box-sizing: border-box;
+}
+
+.photo-sidebar {
+    width: 200px;
+    float: right;
+}
+
+.photo-sidebar .item {
+    width: 100%;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.photo-sidebar .item span {
+    color: #717171;
+    font-weight: bold;
+    font-size: 13px;
+}
+
+.comment-form {
+    width: 760px;
+}
+
+.comment-form textarea {
+    width: 100%;
+    height: 80px;
+}
+
+.comments {
+    max-width: 760px;
+}
+
+.comment {
+    margin-bottom: 10px;
+    border-bottom: 1px solid #e8e8e8;
+}
+
+.comment .comment-title a {
+    color: #da1f1f;
+}
+
+.comment .comment-title span {
+    color: #717171;
+    font-size: 13px;
+}
+
+.comment p {
+    padding: 5px 10px 5px 20px;
+    font-size: 14px;
 }
 
 footer {
